refactor: order 관련 service에서 repository 사용하도록 리팩터링